--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.1.6",
+    "@nestjs/swagger": "^11.2.0",
     "@prisma/client": "^6.13.0",
     "@supabase/supabase-js": "^2.54.0",
     "bcryptjs": "^3.0.2",
@@ -35,7 +36,8 @@
     "passport-local": "^1.0.0",
     "prisma": "^6.13.0",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.2"
+    "rxjs": "^7.8.2",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^11.0.10",
