--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "vercel-build": "prisma generate && nest build",
+    "postinstall": "prisma generate",
     "prisma:generate": "prisma generate",
     "prisma:studio": "prisma studio",
     "prisma:migrate": "prisma migrate dev",
-    "prisma:deploy": "prisma migrate deploy",
-    "postinstall": "prisma generate"
+    "prisma:deploy": "prisma migrate deploy"
   },
   "dependencies": {
     "@nestjs/common": "^11.1.6",
