--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
   "buildCommand": "npm run vercel-build",
   "builds": [
     {
-      "src": "package.json",
+      "src": "api/index.js",
       "use": "@vercel/node"
     }
   ],
